Added pruning 'classic' + fixed bug in gradient propagation
-pruning 'classic' is now implemented
- gradient is now correctly propagated when the weights of gm are parameters

--- a/src/Debug.ipynb
+++ b/src/Debug.ipynb
@@ -8,21 +8,45 @@
    "source": [
     "from sogaPreprocessor import *\n",
     "from producecfg import *\n",
-    "from smoothcfg import *"
+    "from smoothcfg import *\n",
+    "from libSOGA import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dist<['x'],pi: tensor([[0.1000],\n",
+       "        [0.1000],\n",
+       "        [0.8000]])\n",
+       "mu: tensor([[1.],\n",
+       "        [1.],\n",
+       "        [2.]])\n",
+       "sigma: tensor([[[1.]],\n",
+       "\n",
+       "        [[1.]],\n",
+       "\n",
+       "        [[1.]]])>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "compiledFile=compile2SOGA_text('x = gm([0.5, 0.5], [0., 1.], [0., 0.]); y = x + gm([1.], [0.], [1.]);')\n",
+    "compiledFile=compile2SOGA_text('x = gm([0.1, 0.1, 0.8], [1., 1., 2.], [1., 1., 1.]); ')\n",
     "cfg = produce_cfg_text(compiledFile)\n",
+    "smooth_cfg(cfg)\n",
     "\n",
-    "params_dict = {'alpha': 1.}\n",
+    "params_dict = {}\n",
     "\n",
-    "start_smoother(cfg, params_dict)"
+    "output_dist = start_SOGA(cfg, params_dict)\n",
+    "output_dist"
    ]
   },
   {
@@ -31,12 +55,32 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pruning Dist<['x'],pi: tensor([[0.1000],\n",
+      "        [0.1000],\n",
+      "        [0.8000]])\n",
+      "mu: tensor([[1.],\n",
+      "        [1.],\n",
+      "        [2.]])\n",
+      "sigma: tensor([[[1.]],\n",
+      "\n",
+      "        [[1.]],\n",
+      "\n",
+      "        [[1.]]])>  with  classic  Kmax= 2\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'entry': EntryNode<>,\n",
-       " 'state0': StateNode<state0,None,x=gm([0.5,0.5],[0.,1.],[0.,0.]),smoothed:x=gm([0.5,0.5], [0.,1.], [0.0010000000, 0.0010000000])>,\n",
-       " 'state1': StateNode<state1,None,y=x+gm([1.],[0.],[1.])>,\n",
-       " 'exit': ExitNode<>}"
+       "Dist<['x'],pi: tensor([[0.8000],\n",
+       "        [0.2000]])\n",
+       "mu: tensor([[2.],\n",
+       "        [1.]])\n",
+       "sigma: tensor([[[1.]],\n",
+       "\n",
+       "        [[1.]]])>"
       ]
      },
      "execution_count": 3,
@@ -45,7 +89,14 @@
     }
    ],
    "source": [
-    "cfg.node_list"
+    "compiledFile=compile2SOGA_text('x = gm([0.1, 0.1, 0.8], [1., 1., 2.], [1., 1., 1.]); prune(2);')\n",
+    "cfg = produce_cfg_text(compiledFile)\n",
+    "smooth_cfg(cfg)\n",
+    "\n",
+    "params_dict = {}\n",
+    "\n",
+    "output_dist = start_SOGA(cfg, params_dict)\n",
+    "output_dist"
    ]
   },
   {
@@ -56,7 +107,15 @@
     {
      "data": {
       "text/plain": [
-       "['x']"
+       "Dist<['x', 'y'],pi: tensor([[0.8000],\n",
+       "        [0.2000]])\n",
+       "mu: tensor([[1., 1.],\n",
+       "        [0., 2.]])\n",
+       "sigma: tensor([[[1.0000, 0.0000],\n",
+       "         [0.0000, 1.0000]],\n",
+       "\n",
+       "        [[1.0100, 0.0000],\n",
+       "         [0.0000, 1.0000]]])>"
       ]
      },
      "execution_count": 4,
@@ -65,7 +124,9 @@
     }
    ],
    "source": [
-    "cfg.smoothed_vars"
+    "dist = Dist(['x', 'y'], GaussianMix(torch.tensor([[0.1], [0.1], [0.8]]), torch.tensor([[-0.1, 2.], [0.1, 2.], [1., 1.]]), torch.stack([torch.eye(2), torch.eye(2), torch.eye(2)])))\n",
+    "\n",
+    "classic_prune(dist, 2)"
    ]
   },
   {
