Added ranking pruning

--- a/src/Debug.ipynb
+++ b/src/Debug.ipynb
@@ -22,7 +22,7 @@
       "text/plain": [
        "Dist<['x'],pi: tensor([[0.1000],\n",
        "        [0.1000],\n",
-       "        [0.8000]])\n",
+       "        [0.8000]], grad_fn=<DivBackward0>)\n",
        "mu: tensor([[1.],\n",
        "        [1.],\n",
        "        [2.]])\n",
@@ -39,13 +39,14 @@
     }
    ],
    "source": [
-    "compiledFile=compile2SOGA_text('x = gm([0.1, 0.1, 0.8], [1., 1., 2.], [1., 1., 1.]); ')\n",
+    "compiledFile=compile2SOGA_text('x = gm([_pi1, _pi1, _pi2], [1., 1., 2.], [1., 1., 1.]); ')\n",
     "cfg = produce_cfg_text(compiledFile)\n",
     "smooth_cfg(cfg)\n",
     "\n",
-    "params_dict = {}\n",
+    "params_dict = {'pi1': torch.tensor(0.1, requires_grad=True),\n",
+    "                'pi2': torch.tensor(0.8, requires_grad=True),}\n",
     "\n",
-    "output_dist = start_SOGA(cfg, params_dict)\n",
+    "output_dist = start_SOGA(cfg, params_dict, pruning='classic')\n",
     "output_dist"
    ]
   },
@@ -55,32 +56,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pruning Dist<['x'],pi: tensor([[0.1000],\n",
-      "        [0.1000],\n",
-      "        [0.8000]])\n",
-      "mu: tensor([[1.],\n",
-      "        [1.],\n",
-      "        [2.]])\n",
-      "sigma: tensor([[[1.]],\n",
-      "\n",
-      "        [[1.]],\n",
-      "\n",
-      "        [[1.]]])>  with  classic  Kmax= 2\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "Dist<['x'],pi: tensor([[0.8000],\n",
-       "        [0.2000]])\n",
+       "        [0.2000]], grad_fn=<DivBackward0>)\n",
        "mu: tensor([[2.],\n",
-       "        [1.]])\n",
+       "        [1.]], grad_fn=<IndexBackward0>)\n",
        "sigma: tensor([[[1.]],\n",
        "\n",
-       "        [[1.]]])>"
+       "        [[1.]]], grad_fn=<IndexBackward0>)>"
       ]
      },
      "execution_count": 3,
@@ -89,36 +73,109 @@
     }
    ],
    "source": [
-    "compiledFile=compile2SOGA_text('x = gm([0.1, 0.1, 0.8], [1., 1., 2.], [1., 1., 1.]); prune(2);')\n",
+    "compiledFile=compile2SOGA_text('x = gm([_pi1, _pi1, _pi2], [1., 1., 2.], [1., 1., 1.]); prune(2);')\n",
     "cfg = produce_cfg_text(compiledFile)\n",
     "smooth_cfg(cfg)\n",
     "\n",
-    "params_dict = {}\n",
+    "params_dict = {'pi1': torch.tensor(0.1, requires_grad=True),\n",
+    "                'pi2': torch.tensor(0.8, requires_grad=True),}\n",
     "\n",
-    "output_dist = start_SOGA(cfg, params_dict)\n",
+    "output_dist = start_SOGA(cfg, params_dict, pruning='classic')\n",
     "output_dist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Dist<['x', 'y'],pi: tensor([[0.8000],\n",
-       "        [0.2000]])\n",
-       "mu: tensor([[1., 1.],\n",
-       "        [0., 2.]])\n",
-       "sigma: tensor([[[1.0000, 0.0000],\n",
-       "         [0.0000, 1.0000]],\n",
+       "Dist<['x'],pi: tensor([[0.1000],\n",
+       "        [0.1000],\n",
+       "        [0.8000]])\n",
+       "mu: tensor([[0.1000],\n",
+       "        [0.1000],\n",
+       "        [0.8000]], grad_fn=<IndexBackward0>)\n",
+       "sigma: tensor([[[1.]],\n",
        "\n",
-       "        [[1.0100, 0.0000],\n",
-       "         [0.0000, 1.0000]]])>"
+       "        [[1.]],\n",
+       "\n",
+       "        [[1.]]])>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compiledFile=compile2SOGA_text('x = gm([0.1, 0.1, 0.8], [1., 1., 2.], [_sigma1, _sigma1, _sigma2]); ')\n",
+    "cfg = produce_cfg_text(compiledFile)\n",
+    "smooth_cfg(cfg)\n",
+    "\n",
+    "params_dict = {'sigma1': torch.tensor(1., requires_grad=True),\n",
+    "                'sigma2': torch.tensor(1., requires_grad=True),}\n",
+    "\n",
+    "output_dist = start_SOGA(cfg, params_dict, pruning='ranking')\n",
+    "output_dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dist<['x'],pi: tensor([[0.8889],\n",
+       "        [0.1111]])\n",
+       "mu: tensor([[2.],\n",
+       "        [1.]])\n",
+       "sigma: tensor([[[1.]],\n",
+       "\n",
+       "        [[1.]]], grad_fn=<IndexBackward0>)>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compiledFile=compile2SOGA_text('x = gm([0.1, 0.1, 0.8], [1., 1., 2.], [_sigma1, _sigma1, _sigma2]); prune(2);')\n",
+    "cfg = produce_cfg_text(compiledFile)\n",
+    "smooth_cfg(cfg)\n",
+    "\n",
+    "params_dict = {'sigma1': torch.tensor(1., requires_grad=True),\n",
+    "                'sigma2': torch.tensor(1., requires_grad=True),}\n",
+    "\n",
+    "output_dist = start_SOGA(cfg, params_dict, pruning='ranking')\n",
+    "output_dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dist<['x', 'y'],pi: tensor([[0.8889],\n",
+       "        [0.1111]])\n",
+       "mu: tensor([[ 1.0000,  1.0000],\n",
+       "        [-0.1000,  2.0000]])\n",
+       "sigma: tensor([[[1., 0.],\n",
+       "         [0., 1.]],\n",
+       "\n",
+       "        [[1., 0.],\n",
+       "         [0., 1.]]])>"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +183,7 @@
    "source": [
     "dist = Dist(['x', 'y'], GaussianMix(torch.tensor([[0.1], [0.1], [0.8]]), torch.tensor([[-0.1, 2.], [0.1, 2.], [1., 1.]]), torch.stack([torch.eye(2), torch.eye(2), torch.eye(2)])))\n",
     "\n",
-    "classic_prune(dist, 2)"
+    "ranking_prune(dist, 2)"
    ]
   },
   {
