--- a/src/Causality.ipynb
+++ b/src/Causality.ipynb
@@ -10,8 +10,10 @@
     "We would like to represent an acyclic SCM $M = (U, V, f_V, P_U)$ as a SOGA Probabilistic Program. We set the following assumptions:\n",
     "\n",
     "- Exogenous variables $u \\in U$ are independent from any other variable (exogenous or endogenous)\n",
-    "- All the varibles are declared only once (so we guarantee acyclicity)\n",
+    "- All the varibles are declared only once (so we guarantee acyclicity). This in SOGA means in one block of instructions all x = something; x = x...\n",
     "- Each endogenous variable depends only from one exogenous variables (to guarantee Markovianity)\n",
+    "- As this is a program, variables that are not yet declared can't be used\n",
+    "- If: non puoi definire solo variabili in un branch\n",
     "\n",
     "Moreover, we need to:\n",
     "\n",
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "5bfc9c0d",
    "metadata": {},
    "outputs": [],
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "2addd411",
    "metadata": {},
    "outputs": [],
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "361278f3",
    "metadata": {},
    "outputs": [
@@ -60,14 +62,14 @@
      "data": {
       "text/plain": [
        "Dist<['a', 'b', 'd', 'c'],pi: tensor([[1.]])\n",
-       "mu: tensor([[ 2.0000,  4.0000,  2.0000, 35.0000]])\n",
-       "sigma: tensor([[[   4.0000,    8.0000,    4.0000,   68.0000],\n",
-       "         [   8.0000,   17.0000,    8.0000,  144.0000],\n",
-       "         [   4.0000,    8.0000,    5.0000,   69.0000],\n",
-       "         [  68.0000,  144.0000,   69.0000, 1800.0001]]])>"
+       "mu: tensor([[2., 4., 2., 8.]])\n",
+       "sigma: tensor([[[ 4.0000,  8.0000,  4.0000, 12.0000],\n",
+       "         [ 8.0000, 17.0000,  8.0000, 25.0000],\n",
+       "         [ 4.0000,  8.0000,  5.0000, 13.0000],\n",
+       "         [12.0000, 25.0000, 13.0000, 39.0000]]])>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "ba655271",
    "metadata": {},
    "outputs": [
@@ -87,14 +89,14 @@
      "data": {
       "text/plain": [
        "Dist<['a', 'b', 'd', 'c'],pi: tensor([[1.]])\n",
-       "mu: tensor([[ 2.0000,  4.0000,  2.0000, 35.0000]])\n",
-       "sigma: tensor([[[   4.0000,    0.0000,    4.0000,   68.0000],\n",
-       "         [   0.0000,   17.0000,    8.0000,  144.0000],\n",
-       "         [   4.0000,    8.0000,    5.0000,   69.0000],\n",
-       "         [  68.0000,  144.0000,   69.0000, 1800.0001]]])>"
+       "mu: tensor([[2., 4., 2., 8.]])\n",
+       "sigma: tensor([[[ 4.0000,  0.0000,  4.0000, 12.0000],\n",
+       "         [ 0.0000, 17.0000,  8.0000, 25.0000],\n",
+       "         [ 4.0000,  8.0000,  5.0000, 13.0000],\n",
+       "         [12.0000, 25.0000, 13.0000, 39.0000]]])>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,17 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "bc67ea8b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 2.0000,  4.0000,  2.0000, 35.0000]])"
+       "tensor([[2., 4., 2., 8.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "66402646",
    "metadata": {},
    "outputs": [
@@ -142,10 +144,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conditional Mean: [ 2.          1.52941179 26.52941279]\n",
-      "Conditional Covariance: [[  4.           4.          68.        ]\n",
-      " [  4.           1.23529434   1.23529434]\n",
-      " [ 68.           1.23529434 580.23536234]]\n"
+      "Conditional Mean: [2.         1.52941179 6.52941179]\n",
+      "Conditional Covariance: [[ 4.          4.         12.        ]\n",
+      " [ 4.          1.23529434  1.23529434]\n",
+      " [12.          1.23529434  2.23529534]]\n"
      ]
     }
    ],
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "36036a2a",
    "metadata": {},
    "outputs": [
@@ -184,14 +186,14 @@
      "data": {
       "text/plain": [
        "Dist<['a', 'b', 'd', 'c'],pi: tensor([[1.]])\n",
-       "mu: tensor([[ 2.0000,  3.0000,  2.0000, 11.0000]])\n",
+       "mu: tensor([[2., 3., 2., 7.]])\n",
        "sigma: tensor([[[4.0000e+00, 0.0000e+00, 4.0000e+00, 4.0000e+00],\n",
-       "         [0.0000e+00, 1.0000e-06, 0.0000e+00, 6.0000e-06],\n",
+       "         [0.0000e+00, 1.0000e-06, 0.0000e+00, 1.0000e-06],\n",
        "         [4.0000e+00, 0.0000e+00, 5.0000e+00, 5.0000e+00],\n",
-       "         [4.0000e+00, 6.0000e-06, 5.0000e+00, 6.0000e+00]]])>"
+       "         [4.0000e+00, 1.0000e-06, 5.0000e+00, 6.0000e+00]]])>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
