--- a/src/CaseStudy-BNN-VI.ipynb
+++ b/src/CaseStudy-BNN-VI.ipynb
@@ -1083,7 +1083,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "base",
+      "display_name": "simple_env",
       "language": "python",
       "name": "python3"
     },
@@ -1097,7 +1097,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.12.9"
     }
   },
   "nbformat": 4,
