--- a/src/Case Study 1 - Thermostat.ipynb
+++ b/src/Case Study 1 - Thermostat.ipynb
@@ -939,7 +939,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "simple_env",
    "language": "python",
    "name": "python3"
   },
@@ -953,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
