reachability case studies

--- a/src/REACHABILITY/Insuline_Glucose.ipynb
+++ b/src/REACHABILITY/Insuline_Glucose.ipynb
@@ -5,32 +5,14 @@
    "id": "62653f5c-f99e-425b-81b6-ede28e55cab4",
    "metadata": {},
    "source": [
-    "# Controlled Bouncing Ball\n",
+    "# Insuline-glucose regulatory model\n",
     "\n",
     "Example taken from: ProbReach paper\n",
     "\n",
-    "```\n",
-    "mass R = ?, C = ?, H = ?\n",
-    "\n",
-    "repeat {\n",
-    "    if H<= 0 {\n",
-    "        mode = 1\n",
-    "    }\n",
-    "    else {\n",
-    "        mode = -1\n",
-    "    }\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "Height and velocity evolve according to:\n",
-    "$$ \\frac{d \\textit{H}}{dt} = \\begin{cases} v & \\text{if mode = -1} \\\\\n",
-    "                                             v & \\text{if mode = 1}  \\end{cases} $$\n",
-    "\n",
-    "$$ \\frac{d \\textit{v}}{dt} = \\begin{cases} -g & \\text{if mode = -1} \\\\\n",
-    "                                              - g - \\frac{Rv + \\frac{H}{C}}{m} & \\text{if mode = 1}  \\end{cases} $$\n",
     "\n",
     "\n",
-    "We try to synthesize R and H/C in order to maximize the probability that the ball reaches H >=7 in mode 1 after making one bounce"
+    "\n",
+    "We try to synthesize the infusion rate u and ? in order to maximize the probability that glucose rate G returns back to normal within 60 minutes after the pump started infusion."
    ]
   },
   {
@@ -43,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "0ae5d37d",
    "metadata": {},
    "outputs": [
@@ -51,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/rominadoz/micromamba/envs/simple_env/lib/python312.zip', '/Users/rominadoz/micromamba/envs/simple_env/lib/python3.12', '/Users/rominadoz/micromamba/envs/simple_env/lib/python3.12/lib-dynload', '', '/Users/rominadoz/micromamba/envs/simple_env/lib/python3.12/site-packages', '/Users/rominadoz/Desktop/Home/PhD/SOGA/DeGAS/src', '/var/folders/wj/s0d4084s7rz93njmy26_wwnw0000gn/T/tmpib1kv7wq', '/Users/rominadoz/Desktop/Home/PhD/SOGA/DeGAS/src']\n"
+      "['/Users/rominadoz/micromamba/envs/simple_env/lib/python312.zip', '/Users/rominadoz/micromamba/envs/simple_env/lib/python3.12', '/Users/rominadoz/micromamba/envs/simple_env/lib/python3.12/lib-dynload', '', '/Users/rominadoz/micromamba/envs/simple_env/lib/python3.12/site-packages', '/Users/rominadoz/Desktop/Home/PhD/SOGA/DeGAS/src']\n"
      ]
     }
    ],
@@ -72,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "5bc41399",
    "metadata": {},
    "outputs": [],
@@ -83,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "eaf8f752",
    "metadata": {},
    "outputs": [
@@ -110,27 +92,21 @@
    ],
    "source": [
     "soga_code = \"\"\"\n",
-    "array[46] H;\n",
+    "array[46] G;\n",
     "\n",
     "/* Initial state */\n",
-    "currH = gauss(9., 1.);   \n",
-    "mode = -1.;\n",
-    "currV = 0.;\n",
-    "\n",
-    "bounced = -1.;\n",
-    "valid = -1.;\n",
-    "count = 0.;\n",
-    "\n",
+    "curr_Q1 = 64.;\n",
+    "curr_Q2 = 40.;\n",
     "dt = 0.08;            \n",
     "\n",
     "for i in range(45) {\n",
     "    /* Save current state */\n",
-    "    H[i] = currH;\n",
+    "    G[i] = curr_Q1 * 0.0625;\n",
     "\n",
     "    /* Continuous dynamics */\n",
     "\n",
-    "    temp = currV * dt;\n",
-    "    newH = currH + temp + gauss(0., 0.1);\n",
+    "    new_Q1 = \n",
+    "    new_Q1 = new_Q1 * dt;\n",
     "\n",
     "    if mode < 0 {\n",
     "        /* falling down */\n",
