--- a/src/REACHABILITY/Thermostat.ipynb
+++ b/src/REACHABILITY/Thermostat.ipynb
@@ -407,7 +407,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "simple_env",
    "language": "python",
    "name": "python3"
   },
@@ -421,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
