programs optimization init

--- a/src/BNN/CaseStudy-BNN.ipynb
+++ b/src/BNN/CaseStudy-BNN.ipynb
@@ -442,7 +442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -520,7 +520,7 @@
         "x = _x;\n",
         "if x > -1 {\n",
         "    if x < 1 {\n",
-        "        observe(y == -5);\n",
+        "        observe(y < -5);\n",
         "    } else {\n",
         "        skip;\n",
         "    } end if;\n",
