--- a/src/SensitivityExample.ipynb
+++ b/src/SensitivityExample.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "29fceeca",
    "metadata": {},
    "outputs": [
@@ -59,6 +59,7 @@
     "print(p_list)\n",
     "print(m_list)\n",
     "print(s_list)\n",
+    "    \n",
     "    "
    ]
   },
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "d755d842",
    "metadata": {},
    "outputs": [
@@ -214,8 +215,8 @@
      "output_type": "stream",
      "text": [
       "[0.49921729887099875, 0.5, 0.5, 0.5]\n",
-      "[tensor([0.]), tensor([0.]), tensor([0.]), tensor([0.])]\n",
-      "[tensor([0.0991]), tensor([0.0100]), tensor([0.0010]), tensor([0.0001])]\n"
+      "[[0.0], [0.0], [0.0], [0.0]]\n",
+      "[[0.09914497526770921], [0.01], [0.001], [0.0001]]\n"
      ]
     }
    ],
@@ -233,8 +234,8 @@
     "                                             torch.tensor([[[eps**2]], [[eps**2]]])))\n",
     "    p, trunc_dist = truncate(init_dist, 'x > - {} and x < {}'.format(delta.item(), delta.item()), [], {})\n",
     "    p_list.append(p.item())\n",
-    "    m_list.append(trunc_dist.gm.mu.flatten())\n",
-    "    s_list.append(torch.sqrt(trunc_dist.gm.sigma).flatten())\n",
+    "    m_list.append(trunc_dist.gm.mu.flatten().tolist())\n",
+    "    s_list.append(torch.sqrt(trunc_dist.gm.sigma).flatten().tolist())\n",
     "\n",
     "print(p_list)\n",
     "print(m_list)\n",
